--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portifólio felipe e zico</title>
+
 </head>
 <body>
+
+<p>NOS SOMOS FELIPE E MATHEUS CUNHA BENTO</p>
+<p>NOS ESTUDAMOS MATEMATICA</p>
+<p>EU SOU FELIPE GOSTO DE FUTSAL</p>
+<p>EU SOU MATHEUS GOSTO DE DISCIPLINAR O KAUA NO TRUCO</p>
+<p>NOSSAS HABILIDADES</p>
+<div>
+    <p>JOGAR FUTSAL</p>
+    <p> DISCIPLINAR O KAUA NO TRUCO</p>
+</div>
     
 </body>
 </html>
