--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-
+<img src="img/IMG_20250428_075744.jpg">
 <p>NOS SOMOS FELIPE E MATHEUS CUNHA BENTO</p>
 <p>NOS ESTUDAMOS MATEMATICA</p>
 <p>EU SOU FELIPE GOSTO DE FUTSAL</p>
