--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot; rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <title>portifólio felipe e zico</title>
 
 </head>
-<body>
-<img src="img/IMG_20250428_075744.jpg">
-<p>NOS SOMOS FELIPE E MATHEUS CUNHA BENTO</p>
+<body class="container text center">
+<img src="img/IMG_20250428_075744.jpg" class="rounded-circle" width="150" height="150"     >
+<p class="lead">NOS SOMOS FELIPE E MATHEUS CUNHA BENTO</p>
 <p>NOS ESTUDAMOS MATEMATICA</p>
 <p>EU SOU FELIPE GOSTO DE FUTSAL</p>
 <p>EU SOU MATHEUS GOSTO DE DISCIPLINAR O KAUA NO TRUCO</p>
 <p>NOSSAS HABILIDADES</p>
 <div>
-    <p>JOGAR FUTSAL</p>
+    <p class="badge text-bg-secondary">JOGAR FUTSAL</p> 
     <p> DISCIPLINAR O KAUA NO TRUCO</p>
 </div>
     
 </body>
+<script
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"
+></script>
 </html>
