--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>portifólio felipe e zico</title>
 
 </head>
-<body class="container text center">
+<body><
+ <header class="container text center">
 <img src="img/IMG_20250428_075744.jpg" class="rounded-circle" width="150" height="150"     >
 <p class="lead">NOS SOMOS FELIPE E MATHEUS CUNHA BENTO</p>
 <p>NOS ESTUDAMOS MATEMATICA</p>
@@ -18,7 +19,20 @@
     <p class="badge text-bg-secondary">JOGAR FUTSAL</p> 
     <p> DISCIPLINAR O KAUA NO TRUCO</p>
 </div>
-    
+</header>
+<main class="container"> </main>
+     <h2>UM POUCO SOBRE NOSSAS HABILIDADES</h2>  
+     <div class="row" >
+        <div class="col-mds-4">
+           <div class="card" style="width: 18 rem;">
+            <img src= "link da imagem"    class="card-img-top">
+            <div class="card-body"> 
+            </div>
+
+            </div>
+           </div>
+
+     </div>
 </body>
 <script
 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
