--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body><
  <header class="container text center">
-<img src="img/IMG_20250428_075744.jpg" class="rounded-circle" width="150" height="150"     >
+<img src="img/IMG_20250428_075744.jpg" class="rounded-circle" width="150" height="150">
 <p class="lead">NOS SOMOS FELIPE E MATHEUS CUNHA BENTO</p>
 <p>NOS ESTUDAMOS MATEMATICA</p>
 <p>EU SOU FELIPE GOSTO DE FUTSAL</p>
@@ -23,16 +23,29 @@
 <main class="container"> </main>
      <h2>UM POUCO SOBRE NOSSAS HABILIDADES</h2>  
      <div class="row" >
-        <div class="col-mds-4">
+        <div class="col-md-4">
            <div class="card" style="width: 18 rem;">
             <img src= "link da imagem"    class="card-img-top">
             <div class="card-body"> 
+                <h5 class="card-title">FUTSAL</h5>
+                <p class="card-text">SOU GOLEIRO E PEGO TODAS AS BOLAS QUE VEM NA MINHA RETA</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-
             </div>
            </div>
-
      </div>
+
+     <div class="col-md-4">
+           <div class="card" style="width: 18 rem;">
+            < img src="img/como-jogar-truco-buscape-ordem-das-cartas-manilha.webp"    class="card-img-top">
+            <div class="card-body"> 
+                <h5 class="card-title">DISCIPLINAR O KAUA NO TRUCO</h5>
+                <p class="card-text">NOS GOSTAMOS DE EDUCAR O KAUA NO TRUCO, E ELE NÂO PODE RECLAMAR</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            </div>
+           </div>
+    </main>
 </body>
 <script
 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
