--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body><
- <header class="container text center">
+ <header class="container text-center">
 <img src="img/IMG_20250428_075744.jpg" class="rounded-circle" width="150" height="150">
 <p class="lead">NOS SOMOS FELIPE E MATHEUS CUNHA BENTO</p>
 <p>NOS ESTUDAMOS MATEMATICA</p>
