--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <div class="row" >
         <div class="col-md-4">
            <div class="card" style="width: 18 rem;">
-            <img src= "link da imagem"    class="card-img-top">
+            <img src= "img/19.01.2021-Selecao-Foto-Thais-Magalhaes.jpeg"    class="card-img-top">
             <div class="card-body"> 
                 <h5 class="card-title">FUTSAL</h5>
                 <p class="card-text">SOU GOLEIRO E PEGO TODAS AS BOLAS QUE VEM NA MINHA RETA</p>
@@ -35,8 +35,8 @@
      </div>
 
      <div class="col-md-4">
-           <div class="card" style="width: 18 rem;">
-            < img src="img/como-jogar-truco-buscape-ordem-das-cartas-manilha.webp"    class="card-img-top">
+           <div class="card" >
+            <img src="img/download.jpeg"    class="card-img-top">
             <div class="card-body"> 
                 <h5 class="card-title">DISCIPLINAR O KAUA NO TRUCO</h5>
                 <p class="card-text">NOS GOSTAMOS DE EDUCAR O KAUA NO TRUCO, E ELE NÂO PODE RECLAMAR</p>
